liuchundong2008@gmail.com 1、删掉Other，编辑ConstantPool